fix spacing error in formatted code fences

--- a/themes/paradox/assets/scss/theme.screen.scss
+++ b/themes/paradox/assets/scss/theme.screen.scss
@@ -868,13 +868,13 @@ that modify the final layout.
 /* PreWrapper */ .chroma { background-color: #f8f8f8; }
 /* Other */ .chroma .x { color: #000000 }
 /* Error */ .chroma .err { color: #a40000 }
-/* CodeLine */ .chroma .cl { display: flex }
+/* CodeLine */ .chroma .cl { }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
 /* LineHighlight */ .chroma .hl { background-color: #ffffcc }
 /* LineNumbersTable */ .chroma .lnt { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* LineNumbers */ .chroma .ln { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* Line */ .chroma .line { display: flex }
+/* Line */ .chroma .line { display: flex; white-space: pre }
 /* Keyword */ .chroma .k { color: #204a87; font-weight: bold }
 /* KeywordConstant */ .chroma .kc { color: #204a87; font-weight: bold }
 /* KeywordDeclaration */ .chroma .kd { color: #204a87; font-weight: bold }
